# HousePriceDashboard

./: .gitignore  SPEC.md  index.html  wrangler.jsonc
css/: main.css  map.css
data/prices/: 1995.json  1997.json  1998.json  1999.json  2000.json  2001.json  2003.json  2005.json  2007.json  2010.json  2011.json  2012.json  2014.json  2015.json  2016.json  2022.json  2023.json  2024.json  2025.json
js/: data-loader.js  filters.js  heatmap.js  main.js  tabs.js  tooltip.js
public/: index.html
public/css/: main.css
public/data/: inflation.json
public/data/prices/: 1995.json  1996.json  1997.json  1998.json  1999.json  2000.json  2001.json  2002.json  2003.json  2004.json  2005.json  2006.json  2007.json  2008.json  2009.json  2010.json  2011.json  2012.json  2013.json  2014.json  2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json
public/js/: data-loader.js  filters.js  heatmap.js  main.js  map.js  tooltip.js
scripts/: README.md  download_boundaries.py  download_data.py  process_boundaries.py  process_prices.py  pyproject.toml  simplify_boundaries.py
