[project]
name = "house-price-pipeline"
version = "0.1.0"
description = "Data pipeline scripts for UK House Price Heatmap"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
geo = [
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
]

[project.scripts]
download-prices = "download_data:main"
process-prices = "process_prices:process_data"
download-boundaries = "download_boundaries:main"
process-boundaries = "process_boundaries:process_boundaries"
